:bug: Fix: fix code block scrollbar color error

--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -257,11 +257,13 @@
     }
 
     .table-wrapper {
-      overflow-x: auto;
-      --#{$prefix}scrollbar-thumb-color: #{$table-background-color};
-
-      [data-theme='dark'] & {
-        --#{$prefix}scrollbar-thumb-color: #{$table-background-color-dark};
+      &:not(> .lntable) {
+        overflow-x: auto;
+        --#{$prefix}scrollbar-thumb-color: #{$table-background-color};
+  
+        [data-theme='dark'] & {
+          --#{$prefix}scrollbar-thumb-color: #{$table-background-color-dark};
+        }
       }
 
       > table {
